# joker_calculus

./: .gitignore  Cargo.toml  README.md
examples/: emoji.rs  hello_joker.rs  open_vs_closed.rs  products.rs
src/: lib.rs
