[package]
name = "joker_calculus"
version = "0.2.0"
edition = "2021"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
keywords = ["joker", "calculus", "logic", "philosophy", "advancedresearch"]
description = "An implementation of Joker Calculus in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/joker_calculus.git"
homepage = "https://github.com/advancedresearch/joker_calculus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cuckoofilter = "0.5.0"
num-bigint = "0.4.3"
